Se asigna el id al boton de cerrar.

--- a/module/Admin/view/admin/producto/buscar.phtml
+++ b/module/Admin/view/admin/producto/buscar.phtml
@@ -8,7 +8,7 @@
 <div class="row">  
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" id="btnClosePop" data-dismiss="modal" aria-hidden="true">×</button>
+            <button type="button" class="close" id="<?php echo $this->botonClose?>" data-dismiss="modal" aria-hidden="true">×</button>
             <h4 class="modal-title" id="textModalLabel"><h4 class="text-light">Búsqueda de <strong>Productos</strong></h4></h4>
         </div>
         <div class="box-body">
