--- a/module/Admin/view/admin/pedido-compra/buscar.phtml
+++ b/module/Admin/view/admin/pedido-compra/buscar.phtml
@@ -1,13 +1,12 @@
 <?php $parametrosGet = "&botonClose=".$this->botonClose."&contenedorDialog=".$this->contenedorDialog."&modal=".$this->modal; ?>
 <script type="text/javascript">
     $(document).ready(function() {
-        $('#numeroPedido').attr('readonly','');
         $('#dtbuscarPedidoCompra').DataTable();
         LimpiarModal('<?php echo $this->botonClose ?>','<?php echo $this->contenedorDialog ?>','<?php echo $this->modal ?>');
     });
     function btnBuscar_onclick()
     {
-        usar_ajax("<?php echo $this->basePath()?>/admin/pedidocompra/buscar?vista=<?php echo $this->vista ?>&campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?><?php echo $parametrosGet ?>",'#<?php echo $this->contenedorDialog ?>',"numeroPedido="+$('#numeroPedido').val()+"&idEstadoPedido="+$('#idEstadoPedido').val());
+        usar_ajax("<?php echo $this->basePath()?>/admin/pedidocompra/buscar?vista=<?php echo $this->vista ?>&campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?><?php echo $parametrosGet ?>",'#<?php echo $this->contenedorDialog ?>',"numeroPedido="+$('#numeroPedidoBusqueda').val()+"&idProveedor="+$('#idProveedor').val()+"&nombreProveedor="+$('#nombreProveedorBusqueda').val()+"&idEstadoPedido="+$('#idEstadoPedido').val());
     }
 </script>
   
