--- a/module/Admin/view/admin/saldo-inventario/index.phtml
+++ b/module/Admin/view/admin/saldo-inventario/index.phtml
@@ -9,10 +9,24 @@ if ($this->msg != null)
 ?>
 <div class="row">
     <div class="col-lg-12">
-        <div class="box">
+        <div class="box box-bordered style-primary">
             <div class="box-head">
-                <header><h4 class="text-light">Formulario <strong>Saldo Inventario</strong></h4></header>
+                <header>
+                    <h4 class="text-light">
+                       Formulario <strong>Saldo Inventario</strong> 
+                    </h4>
+                </header>
+                
+                <div class="tools">
+                    <div class="btn-group btn-group-transparent">
+                        <a class="btn btn-equal btn-sm " data-target="#textModal" data-toggle="modal" onclick="usar_ajax('<?php echo $this->basePath()?>/admin/saldoinventario/buscar?origen=saldoinventario/index','#modal-dialog-display','')"><i class="fa  fa-search"></i></a>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+    <div class="col-lg-12">
+        <div class="box">
             <div class="box-body">
                 <?php echo $this->form()->openTag($form); ?>
                     <?php echo $this->formInput($form->get('idSaldoInventario'));?>
@@ -75,7 +89,8 @@ if ($this->msg != null)
                 <?php echo $this->form()->closeTag(); ?>
             </div>
         </div><!--end .box -->
-        <?php if (count($this->registros)>0) { ?>       
+        <?php if (count($this->registros)>0) { ?> 
+        <!--
         <div class="row">  
             <div class="col-lg-12">
                 <div class="box box-bordered">
@@ -116,6 +131,7 @@ if ($this->msg != null)
                 </div>
             </div>
         </div>
+        -->
         <?php } ?>
     </div>
 </div>
