--- a/module/Admin/view/admin/saldo-inventario/index.phtml
+++ b/module/Admin/view/admin/saldo-inventario/index.phtml
@@ -6,6 +6,9 @@ if ($this->msg != null)
 {
     echo "<script type='text/javascript'>".$this->msg."</script>";    
 }
+if ($this->validacion != null) {
+    echo "<script type='text/javascript'>showMessageWarning('Validación','".$this->validacion."');</script>";  
+}
 ?>
 <div class="row">
     <div class="col-lg-12">
@@ -89,50 +92,6 @@ if ($this->msg != null)
                 <?php echo $this->form()->closeTag(); ?>
             </div>
         </div><!--end .box -->
-        <?php if (count($this->registros)>0) { ?> 
-        <!--
-        <div class="row">  
-            <div class="col-lg-12">
-                <div class="box box-bordered">
-                    <div class="box-head">
-                        <header><h4 class="text-light"><strong>Saldo Inventarios</strong> <small>Todas</small></h4></header>
-                    </div>
-                    <div class="box"> 
-                        <div class="box-body table-responsive">
-                            <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                                <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
-                                    <thead>
-                                        <tr role="row">
-                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Producto</th>
-                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Proveedor</th>
-                                            <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Cantidad</th>
-                                            <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Costo Total</th>
-                                            <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">valor Venta</th>
-                                        </tr>
-                                    </thead>    
-                                    <tbody>
-                                         <?php 
-                                        foreach ($this->registros as $obj) {
-                                            echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/saldoinventario/index?id=".$obj['idSaldoInventario']."')\">
-                                                    <td>".$obj['nombreProducto']."</td>
-                                                    <td>".$obj['descripcionProveedor']."</td>
-                                                    <td>".$obj['cantidad']."</td>
-                                                    <td>$".number_format($obj['costoTotal'])."</td>
-                                                    <td>$".number_format($obj['valorVenta'])."</td>
-                                                </tr>";
-                                        }
-                                        ?>
-                                    </tbody>
-                                </table>
-                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        -->
-        <?php } ?>
     </div>
 </div>
  
