--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -317,25 +317,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                     </div>
         	</div>
         	<div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <header class="content-title">
-                                <h1 class="title">Header Version 4</h1>
-                                <div class="md-margin"></div><!-- space -->
-                            </header>
-
-                            <div class="row">
-
-                                <div class="col-md-7 col-sm-8 col-xs-12">					   		
-                                    Venedor has lots of features. This is the example of Header Version 4. Easy to change and customize. You can use these header types for all of Venedor Variants.
-                                    <hr>
-                                    Go back to Venedor's <a href="index.html" title="Homepage">homepage</a>.
-                                </div><!-- End .col-md-7 -->
-
-                            </div><!-- End.row -->
-
-                        </div><!-- End .col-md-12 -->
-                    </div><!-- End .row -->
+                    <?php echo $this->content; ?>
                 </div><!-- End .container -->
         </section><!-- End #content -->
         
