--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -162,6 +162,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                             <ul>
                                 <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/estadopedidoventa">Estado Pedido Venta</a></li>
                                 <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/pedidoventa/solicitud">Solicitud Pedido</a></li>
+                                <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/pedidoventa/autorizar">Autorización Pedido</a></li>
                             </ul>
                         </li>
 
