--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -199,8 +199,8 @@ if (defined('RUNNING_FROM_ROOT')) {
                                     </ul>
                                 </li>
                                 <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/producto" >Producto</a></li>
+                                <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/promocion" >Promociones</a></li>
                                 <li><a href="<?php echo str_replace("/public", "", $this->basePath()) ?>/admin/imagenproducto" >Imagenes Producto</a></li>
-
                             </ul><!--end /submenu -->
                         </li><!--end /menu-item -->
                         <li>
